assets/stylesheets/main.css
/* 
  CSS Reset
  http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
  License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}


/* 
  General
*/
*, *:before, *:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -box-sizing: border-box;
  /* Useful for debugging: border: 1px solid red !important; */ 
}

.container {
  margin: 0 auto;
  width: 960px;
  background: #fff;
}

.col-left {
  width: 75%;
  display: inline-block;
  padding: 25px 0 30px 0;
}
.col-left p:first-child {
  margin-top: 0px;
}
.col-left p:last-child {
  margin-bottom: 0px;
}

.col-right {
  width: 25%;
  height: 100%;
  display: inline-block;
}
.col-right img {
  width: 200px;
  display: block;
  margin-left: auto;
  vertical-align: middle;
  padding-bottom: 5px; /* Because of extra bottom padding on col-left */
}


p {
  font: 100 25px/25px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #000000;
  letter-spacing: -1px;
  text-align: justify;
  margin: 15px 0;
}




/* 
  Header
*/
.primary-header {
  position: relative;
  padding-top: 22px;
}

.logo {
  font: 100 44px/44px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: inline-block;
  letter-spacing: -5px;
  font-style: italic;
  text-transform: lowercase;
}
.logo a:link, .logo a:visited, .logo a:hover, .logo a:active {
  text-decoration: none;
}
.logo a:link {
  color: #120020;
}
.logo a:visited {
  color: #120020;
}
.logo a:hover {
  color: #ed2424;
}
.logo a:active {
  color: #120020;
}

.nav {
  position: absolute;
  margin-top: 20px;
  display: inline-block;
  text-align: right;
  right: 0;
  bottom: 5px;

}
.nav li {
  font: 300 16px/16px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: inline-block;
  letter-spacing: -2px;
  padding: 0 5px 2px 5px;
  border-bottom: 1px solid #120020;
  border-top: 1px solid #120020;
}
.active-nav-item a {
  font-weight: 400;
  color: #000;
}
.nav a {
  text-decoration: none;
  text-transform: lowercase;
}
.nav a:link {
  color: #120020;
}
.nav a:visited {
  color: #120020;
}
.nav a:hover {
  color: #ed2424;
}
.nav a:active {
  color: #120020;
}


/* 
  Footer
*/
footer {
  width: 100%;
  font: 300 16px/16px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  letter-spacing: -2px;
  text-transform: lowercase;  
  
}
footer .copywrite { 
  font-weight: 300;
  font-size: 13px;
  line-height: 13px; 
  font-style: italic;
  letter-spacing: -1px;
  vertical-align: top;
}
footer .social-media {
  float: right;
  text-align: right;
  word-spacing: 2px;
}
footer .social-media small {
  font-weight: 100;
  letter-spacing: -1px;
}
footer a:link, footer a:visited, footer a:hover, footer a:active {
  text-decoration: none;
}
footer a:link {
  color: #120020;
}
footer a:visited {
  color: #120020;
}
footer a:hover {
  color: #ed2424;
}
footer a:active {
  color: #120020;
}



/*
  Projects page
*/
.img-grid {
  margin-left: -5px; /* This is to make the edges of the grid line up with the header and footer */
  margin-right: -5px;
}
.img-grid-elem {
  display: inline-block;
  width: 33.33%;
  padding: 5px;
}
.img-grid-elem figure {
  width: 100%;
  position: relative;
}
.img-grid-elem img{
  width: 100%;
  vertical-align: top; /* to remove space between rows */
}
.img-grid-elem img:hover {
  opacity: 0.5;
}
.img-grid-elem figcaption {
  width: 100%;  
  height: 25px;
  position: absolute;
  top: 151px; /* Probably a better way to do this? */
  left: 0;  
  background-color: #000;
  color: #fff;
  font: 100 25px/25px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-transform: lowercase;
  letter-spacing: -2px;
  text-align: center;
  opacity: 0.75;
  text-decoration: none;
}


/* 
  Blog Page
*/

.single-column {
}
.single-column figure { 
  width: 33.33%;
  margin: 0 auto;
  position: relative;
}
.single-column img {
  width: 100%;
  vertical-align: top;
}
.single-column  img:hover {
  opacity: 0.5;
}
.single-column figcaption {
  width: 100%;  
  height: 25px;
  position: absolute;
  top: 155px; /* Probably a better way to do this? */
  left: 0;  
  background-color: #000;
  color: #fff;
  font: 100 25px/25px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-transform: lowercase;
  letter-spacing: -2px;
  text-align: center;
  opacity: 0.75;
  text-decoration: none;
}

